# round-again

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  add_sample_data.py  docker-compose.yml  init_db.py  migrate_db.py  package-lock.json  package.json  pyproject.toml  run.py  setup_database.py  setup_tailwind.sh  tailwind.config.js
.github/workflows/: docker-latest.yml  docker-unstable.yml  workflow.yml
app/: __init__.py  main.py  models.py  time_utils.py
app/routes/: contacts.py  dashboard.py  interactions.py
app/services/: email_service.py  scheduler_service.py
app/static/css/: input.css  styles.css
app/static/js/: main.js  modal.js
app/templates/: base.html  contact_detail.html  contact_form.html  contact_list.html  dashboard.html  interaction_form.html  interaction_list.html  modal.html  recent_interactions_card.html
app/templates/emails/: base_email.html  reminder.html  weekly_summary.html
app/templates/pages/: contact_detail_page.html
